Fix navigation alignment

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,16 @@ html {
   font-family: "Noto Sans", sans-serif;
 }
 
-lang {
+.ja {
   font-family: "Noto Sans Japanese", sans-serif;
+}
+
+li a {
+  color: #005e76;
+  text-decoration: none;
+  border-bottom: 2px solid #8bc9d9;
+}
+
+.btn-ghost {
+  color: #005e76;
 }
